--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "API de automação do gerenciamento de produtos da loja AgilStore",
   "main": "index.js",
   "scripts": {
-    "start": "node dist/index.ts",
-    "dev": "nodemon --watch src --ext ts --exec ts-node src/index.ts",
+    "start": "nodemon --watch src --ext ts --exec ts-node src/index.ts",
     "build": "tsc"
   },
   "keywords": [],
